fix: adjust response handling according to agent